--- a/image.html
+++ b/image.html
@@ -4,7 +4,8 @@
   
   <title>Document</title>
 </head>
-<body>
-  <img src="Abes_IT_A_Aman32/download.jpeg" alt="not found" height="400px" width="400px">
+<body><center>
+  <img src="Abes_IT_A_Aman32/download.jpeg" alt="not found" height="200px" width="200px" style="border-radius: 50%; background-color: black;">
+  </center>
 </body>
 </html>
