--- a/div.html
+++ b/div.html
@@ -1,13 +1,20 @@
 <html>
 
 <head>
+  <style>
+
+  </style>
  
   <title>Document</title>
 </head>
 <body>
-  <div style= " border : 5px soild red ;">
+  <div style= " border : 5px solid red ;">
     
     <h1>Class of it-A</h1>
+  </div>
+  <div>
+
+    
   </div>
 </body>
 </html>
