--- a/class.html
+++ b/class.html
@@ -6,8 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="div.html">
-  <button>click</button>
-  </a>
+  <p>class</p>
+  
 </body>
 </html>
