--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="div.html">
-  <button>click</button>
-  </a>
+  <p> about us
+    
+  </p>
 </body>
 </html>
