--- a/form.html
+++ b/form.html
@@ -17,8 +17,16 @@
   <label>female</label><br>
   <input type="radio" id="html" name="sbi" value="html1">
 
-  <label>other</label>
- 
+  <label>other</label><br>
+ <form>
+<label>
+  clas 10
+</label>
+<input type="checkbox"><br>
+<label>class 12</label>
+<input type="checkbox"><br>
+</form>
+  
   
 
   
