--- a/form.html
+++ b/form.html
@@ -25,7 +25,16 @@
 <input type="checkbox"><br>
 <label>class 12</label>
 <input type="checkbox"><br>
-</form>
+</form><from>
+  <label for=""> select your city</label>
+  <select nmae="adi" id="aa">
+    <option value="">gonda</option>
+    <option value="">goa</option>
+    <option value="">ghaz</option>
+    <option value="">delhi</option>
+
+  </select>
+</from>
   
   
 
