--- a/javascript/swith.html
+++ b/javascript/swith.html
@@ -6,9 +6,34 @@
 <body>
   <p id="adi"></p>
   <script>
-    var day;
-    switch(new Date().getDay());
-    case 1
+    // var a=1;
+    // do{
+    //   document.write("python<br>");
+    //   a++
+    // }
+    // while(a<=10);
+// var n=20;
+// for(var i=0;i<=n;i++){
+// if(i%2==0){
+//   document.write("<br>",i);
+// }
+// };
+// var c=30;
+// for(var i=0;i<=c;i++){
+// if(i%3==0){
+//   document.write("<br>",i);
+// }}
+var d=10;
+for(var i=0;i<=d;i++){
+document.write("i*2=",i*2,"<br>");
+
+}
+document.write("<br>");
+for(var i=0;i<=d;i++){
+
+document.write("i*3=",i*3,"<br>");
+
+}
   </script>
   
 </body>
